ZGC: Windows address space placeholders not managed correctly

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 23
    • Affects Version/s: 23
    • Component/s: hotspot
    • gc
    • b20

      On windows ZGC uses placeholders to ensure that the virtual address space is kept consistent.

      Recent investigations around fragmentation uncover a bug in this area where a placeholder was not created when a granule sized allocation was made from the end of the address space. This in turn leads to failure to map the given address. This can currently never occur as the current code base never do any granule size allocations from the back of the address space.

            Assignee:
            Stefan Johansson
            Reporter:
            Stefan Johansson
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: