8330626: ZGC: Windows address space placeholders not managed correctly